[gd_scene load_steps=5 format=3 uid="uid://86lvsrrgtdvx"]

[ext_resource type="Script" path="res://hud.gd" id="1_2x38h"]
[ext_resource type="FontFile" uid="uid://e5dt6yj4iwl4" path="res://font.ttf" id="1_6l5es"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xymuw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2s446"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_2x38h")

[node name="PlayerOneScore" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -74.0
offset_right = -34.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_6l5es")
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerTwoScore" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 34.0
offset_right = 74.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_6l5es")
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ExitButton" type="Button" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -24.0
offset_top = -16.0
offset_right = -1.0
offset_bottom = -2.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_6l5es")
theme_override_font_sizes/font_size = 5
theme_override_styles/focus = SubResource("StyleBoxEmpty_xymuw")
text = "Quit"
flat = true

[node name="SingleplayerButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.0
offset_top = -12.0
offset_right = 26.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_6l5es")
theme_override_styles/focus = SubResource("StyleBoxEmpty_2s446")
text = "Singleplayer"
flat = true

[node name="MultiplayerButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = 8.0
offset_right = 28.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_6l5es")
theme_override_styles/focus = SubResource("StyleBoxEmpty_2s446")
text = "Multiplayer"
flat = true

[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="SingleplayerButton" to="." method="_on_singleplayer_button_pressed"]
[connection signal="pressed" from="MultiplayerButton" to="." method="_on_multiplayer_button_pressed"]
